--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS-6-10-23</css-6-10-23></title>
+  <title>CSS-6-10-23</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <h1>My Website</h1>
