--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 
 </div>
 
+<div>
+  <ul>
+    <li>Food</li>
+    <li>medicine</li>
+    <li>Education</li>
+    <li>Home</li>
+  </ul>
+</div>
+<div class="main">
+  <div class="rintu"><a href="https://www.google.com/" target="_blank">GOOGLE</a></div>
+  <div class="rintu"></div>
+  <div class="rintu"></div>
+  <div class="rintu"></div>
+
+</div>
+
 <body>
 
 </body>
